--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -19,20 +19,20 @@
 		<section>Hero section</section>
 		<section>Services section</section>
 		<section>Works section
-			<article>1</article>
-			<article>2</article>
-			<article>3</article>
+			<article>Work 1</article>
+			<article>Work 2</article>
+			<article>Work 3</article>
 		</section>
 		<section>About section</section>
 		<section>Latest news section
-			<article>1</article>
-			<article>2</article>
-			<article>3</article>
+			<article>Article 1</article>
+			<article>Article 2</article>
+			<article>Article 3</article>
 		</section>
 		<section>Testimonials section
-			<article>1</article>
-			<article>2</article>
-			<article>3</article>
+			<article>Testimonial 1</article>
+			<article>Testimonial 2</article>
+			<article>Testimonial 3</article>
 		</section>
 		<section>Contact section</section>
 	</main>
