--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
+
+<!--header-->
     <header>
         <div>
             <span>Techium</span>
@@ -18,16 +20,22 @@
     <main>
         <h1>Homepage</h1>
 
+<!--Hero section-->
         <section>
             <div>
+
+<!--header-->
                 <header>
                     <h2>We help you build your brand!</h2>
                 </header>
             </div>
         </section>
 
+<!--Services section-->
         <section>
             <div>
+
+<!--header-->
                 <header>
                     <h2>Services</h2>
                     <p>We work with you</p>
@@ -43,8 +51,10 @@
             </div>
         </section>
 
+<!--Works section-->
         <section>
             <div>
+<!--header-->
                 <header>
                     <h2>Works</h2>
                     <p>Take a look in our portfolio</p>
@@ -57,8 +67,11 @@
             </div>
         </section>
 
+<!--About Us section-->
         <section>
             <div>
+
+<!--header-->
                 <header>
                     <h2>About us</h2>
                     <p>Everything about us</p>
@@ -74,8 +87,11 @@
             </div>
         </section>
 
+<!--Latest news section-->
         <section>
             <div>
+
+<!--header-->
                 <header>
                     <h2>Latest news</h2>
                 </header>
@@ -99,6 +115,7 @@
             </div>
         </section>
 
+<!--Testimonials section-->
         <section>
             <div>
                 <header>
@@ -113,8 +130,11 @@
             </div>
         </section>
 
+<!--contact section-->
         <section>
             <div>
+
+<!--header-->
                 <header>
                     <h2>Contact</h2>
                     <p>We like to know new people</p>
