--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -10,21 +10,22 @@
 </head>
 <body>
 
-<!-- header -->
+<!-- Header -->
     <header>
         <div>
             <span>Techium</span>
             <nav></nav>
         </div>
     </header>
+
+<!-- Main -->
     <main>
         <h1>Homepage</h1>
 
 <!-- Hero section -->
         <section>
             <div>
-
-<!-- header -->
+                <!-- header -->
                 <header>
                     <h2>We help you build your brand!</h2>
                 </header>
@@ -34,8 +35,7 @@
 <!-- Services section -->
         <section>
             <div>
-
-<!-- header -->
+                <!-- header -->
                 <header>
                     <h2>Services</h2>
                     <p>We work with you</p>
@@ -54,7 +54,7 @@
 <!-- Works section -->
         <section>
             <div>
-<!-- header -->
+                <!-- header -->
                 <header>
                     <h2>Works</h2>
                     <p>Take a look in our portfolio</p>
@@ -70,8 +70,7 @@
 <!-- About Us section -->
         <section>
             <div>
-
-<!-- header -->
+                <!-- header -->
                 <header>
                     <h2>About us</h2>
                     <p>Everything about us</p>
@@ -90,8 +89,7 @@
 <!-- Latest news section -->
         <section>
             <div>
-
-<!-- header -->
+                <!-- header -->
                 <header>
                     <h2>Latest news</h2>
                 </header>
@@ -118,6 +116,7 @@
 <!-- Testimonials section -->
         <section>
             <div>
+                <!-- header -->
                 <header>
                     <h2>Testimonials</h2>
                     <p>We are more than a digital company</p>
@@ -130,11 +129,10 @@
             </div>
         </section>
 
-<!-- contact section -->
+<!-- Contact section -->
         <section>
             <div>
-
-<!-- header -->
+                <!-- header -->
                 <header>
                     <h2>Contact</h2>
                     <p>We like to know new people</p>
@@ -146,8 +144,11 @@
         </section>
 
     </main>
+
+<!-- Footer -->
     <footer>
         <div>Footer</div>
     </footer>
+
 </body>
 </html>
