--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -23,11 +23,11 @@
 												<ul>
 													   <li><a href="/">Home</a></li>
 																<li><a href="Services">Services</a></li>
-																<li><a href="Works">Services</a></li>
-																<li><a href="about">Services</a></li>
-																<li><a href="latest_news">Services</a></li>
-																<li><a href="testiminials">Services</a></li>
-																<li><a href="contact.html">Services</a></li>
+																<li><a href="Works">Works</a></li>
+																<li><a href="about">About</a></li>
+																<li><a href="latest_news">Latest news</a></li>
+																<li><a href="testiminials">Testimonials</a></li>
+																<li><a href="contact.html">contact</a></li>
 												</ul>
 								</nav>
     </header>
