--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -21,13 +21,14 @@
 								</div>
         <nav>
 												<ul>
+													   <a href="#services">Services</a>
 													   <li><a href="/">Home</a></li>
-																<li><a href="Services">Services</a></li>
-																<li><a href="Works">Works</a></li>
-																<li><a href="about">About</a></li>
-																<li><a href="latest_news">Latest news</a></li>
-																<li><a href="testiminials">Testimonials</a></li>
-																<li><a href="contact.html">contact</a></li>
+																<a href="#services">Services</a>
+																<a href="#works">Works</a>
+																<a href="#about">About</a>
+																<a href="#latest_news">Latest news</a>
+																<a href="#testimonials">Testimonials</a>
+																<a href="#contact">Contact</a>
 												</ul>
 								</nav>
     </header>
