--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -163,9 +163,9 @@
     <footer>
         <div>
 									   <lu>
-									       <li><a href="https://www.facebook.com/HolbertonSchool/">facebook</a></li>
-								        <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-																<li><a href="https://www.instagram.com/holbertonschool/">instagram</a></li>
+									       <a href="https://www.facebook.com/HolbertonSchool/"target="_blank">Facebook</a>
+								        <a href="https://twitter.com/holbertonschool"target="_blank">Twitter</a>
+																<a href="https://www.instagram.com/holbertonschool/"target="_blank">Instagram</a>
 												</lu>
 								</div>
     </footer>
