--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -163,9 +163,10 @@
     <footer>
         <div>
 									   <lu>
-									       <a href="https://www.facebook.com/HolbertonSchool/"target="_blank">Facebook</a>|
-								        <a href="https://twitter.com/holbertonschool"target="_blank">Twitter</a> |
-																<a href="https://www.instagram.com/holbertonschool/"target="_blank">Instagram</a>
+													   <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+									       <a href="https://www.facebook.com/HolbertonSchool/">	Twitter</a>|
+								        <a href="https://twitter.com/holbertonschool">Twitter</a> |
+																<a href="https://www.instagram.com/holbertonschool/">Instagram</a>
 												</lu>
 								</div>
     </footer>
