--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -60,7 +60,7 @@
                     <h3><a href="#">Digital Strategy</a></h3>
                     <h3><a href="#">Content Strategy</a></h3>
                     <h3><a href="#">UX Design</a></h3>
-                    <h3><a href="#">web Development</a></h3>
+                    <h3><a href="#">web Developement</a></h3>
                     <h3><a href="#">Social Media</a></h3>
                 </div>
             </div>
