--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -60,7 +60,7 @@
                     <h3><a href="#">Digital Strategy</a></h3>
                     <h3><a href="#">Content Strategy</a></h3>
                     <h3><a href="#">UX Design</a></h3>
-                    <h3><a href="#">web Developement</a></h3>
+                    <h3><a href="#">web Development</a></h3>
                     <h3><a href="#">Social Media</a></h3>
                 </div>
             </div>
@@ -75,9 +75,9 @@
                     <p>Take a look in our portfolio</p>
                 </header>
                 <div>
-                    <article><h3>Interior Design</h3></article>
-                    <article><h3>Web Development</h3></article>
-                    <article><h3>Personal Brand</h3></article>
+                    <article><h3><a href="#">Interior Design</a></h3></article>
+                    <article><h3><a href="#">Web Development</a></h3></article>
+                    <article><h3><a href="#">Personal Brand</a>Personal Brand</h3></article>
                 </div>
             </div>
         </section>
