--- a/html_advanced/28-styleguide.html
+++ b/html_advanced/28-styleguide.html
@@ -29,43 +29,37 @@
         </section>
 
         <!-- Lists -->
-                <section>
-                    <header>
-                        <h2>Lists</h2>
-                    </header>
+        <section>
+            <header>
+                <h2>Lists</h2>
+            </header>
 
-                    <div>
-                        <h3>Unordered</h3>
-                    <ul>
-                        <li>Dolor pulvinar etiam magna etiam.</li>
-                        <li>Sagittis adipiscing lorem eleifend.</li>
-                        <li>Felis enim feugiat dolore viverra.</li>
-                    </ul>
+            <div>
+                <h3>Unordered</h3>
+                <ul>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ul>
 
                 <h3>Ordered</h3>
-            <ol>
-              <li>Dolor pulvinar etiam magna etiam.</li>
-              <li>Sagittis adipiscing lorem eleifend.</li>
-              <li>Felis enim feugiat dolore viverra.</li>
-            </ol>
+                <ol>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ol>
 
-            <h3>Definition</h3>
-            <dl>
-              <dt>Term: Definition List title</dt>
-              <dd>Definition: Definition text.</dd>
-              <dt>Term: Startup</dt>
-              <dd>Definition: A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
-              <dt>Term: Water</dt>
-              <dd>Definition: A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
-            </dl>
-          </div>
+                <h3>Definition</h3>
+                <dl>
+                    <dt>Term: Definition List title</dt>
+                    <dd>Definition: Definition text.</dd>
+                    <dt>Term: Startup</dt>
+                    <dd>Definition: A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                    <dt>Term: Water</dt>
+                    <dd>Definition: A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                </dl>
+            </div>
         </section>
-								<hr> Horizontal rule
-								<section>
-									<header>
-										<h2>Horizontal rule</h2>
-									</header>
-								</section>
 
         <h1>Heading level 1</h1>
         <h2>Heading level 2</h2>
@@ -73,9 +67,18 @@
         <h4>Heading level 4</h4>
         <h5>Heading level 5</h5>
         <h6>Heading level 6</h6>
-      </section>
+
+        <!-- Horizontal rule -->
+        <section>
+            <header>
+                <h2>Horizontal rule</h2>
+            </header>
+            <div>
+                <hr>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
-  </body>
+</body>
 </html>
