--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -13,23 +13,23 @@
 <!-- Header -->
     <header>
         <div>
-								    <div>
-									       <a href="/">
-                <span>Techium</span>
-												    </a>
-								    </div>
-								</div>
+            <div>
+                <a href="/">
+                    <span>Techium</span>
+                </a>
+            </div>
+        </div>
         <nav>
-									   <ul>
-											     <li><a href="/">Home</a></li>
-											     <li><a href="#services">Services</a></li>
-											     <li><a href="#works">Works</a></li>
-											     <li><a href="#about">About</a></li>
-											     <li><a href="#latest_news">Latest news</a></li>
-											     <li><a href="#testimonials">Testimonials</a></li>
-											     <li><a href="#contact">Contact</a></li>
-									   </ul>
-							 </nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#works">Works</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#latest_news">Latest news</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
 <!-- Main -->
@@ -42,7 +42,7 @@
                 <!-- header -->
                 <header>
                     <h2>We help you build your brand!</h2>
-																				<a href="#">Get started</a>
+                    <a href="#">Get started</a>
                 </header>
             </div>
         </section>
@@ -60,7 +60,7 @@
                     <h3><a href="#">Digital Strategy</a></h3>
                     <h3><a href="#">Content Strategy</a></h3>
                     <h3><a href="#">UX Design</a></h3>
-                    <h3><a href="#">web Development</a></h3>
+                    <h3><a href="#">Web Development</a></h3>
                     <h3><a href="#">Social Media</a></h3>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </div>
-																<a href="about.html">Learn more about us</a>
+                <a href="about.html">Learn more about us</a>
             </div>
         </section>
 
@@ -139,17 +139,17 @@
                 </header>
                 <div>
                     <article>
-																					   <blockquote>"I am completely blown away. Thanks to Techium, we've just launched our 5th website!"</blockquote>
-																								<cite>-Yuri Y.</cite>
-																				</article>
+                        <blockquote>"I am completely blown away. Thanks to Techium, we've just launched our 5th website!"</blockquote>
+                        <cite>-Yuri Y.</cite>
+                    </article>
                     <article>
-																				    <blockquote>"Thank you so much for your help. Techium company is awesome!"</blockquote>
-																								<cite>-Dorrie S.</cite>
-																				</article>
+                        <blockquote>"Thank you so much for your help. Techium company is awesome!"</blockquote>
+                        <cite>-Dorrie S.</cite>
+                    </article>
                     <article>
-																			     <blockquote>"I love your system. Definitely worth the investment. I'd be lost without Techium company."</blockquote>
-																								<cite>-Sven H.</cite>
-																				</article>
+                        <blockquote>"I love your system. Definitely worth the investment. I'd be lost without Techium company."</blockquote>
+                        <cite>-Sven H.</cite>
+                    </article>
                 </div>
             </div>
         </section>
@@ -165,7 +165,7 @@
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                 </div>
-																<a href="contact.html">Get in touch</a>
+                <a href="contact.html">Get in touch</a>
             </div>
         </section>
 
@@ -174,20 +174,20 @@
 <!-- Footer -->
     <footer>
         <div>
-									   <ul>
-										      <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-										      <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-										      <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-												</ul>
-								</div>
-								<hr> © 2020 Techium, made with ♥ by students at Holberton School.
-								<div>
-									   <ul>
-									       <a href="#">Terms of Use</a>
-												    <a href="#">Privacy Policy</a>
-												    <a href="#">Cookie Policy</a>
-												</ul>
-								</div>
+            <ul>
+                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+            </ul>
+        </div>
+        <hr> © 2020 Techium, made with ♥ by students at Holberton School.
+        <div>
+            <ul>
+                <a href="#">Terms of Use</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Cookie Policy</a>
+            </ul>
+        </div>
     </footer>
 
 </body>
