--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -29,77 +29,75 @@
                 </p>
             </section>
 
-        <!-- Lists -->
-        <section>
-            <header>
-                <h2>Lists</h2>
-            </header>
+            <!-- Lists -->
+            <section>
+                <header>
+                    <h2>Lists</h2>
+                </header>
 
-            <div>
-                <h3>Unordered</h3>
-                <ul>
-                    <li>Dolor pulvinar etiam magna etiam.</li>
-                    <li>Sagittis adipiscing lorem eleifend.</li>
-                    <li>Felis enim feugiat dolore viverra.</li>
-                </ul>
+                <div>
+                    <h3>Unordered</h3>
+                    <ul>
+                        <li>Dolor pulvinar etiam magna etiam.</li>
+                        <li>Sagittis adipiscing lorem eleifend.</li>
+                        <li>Felis enim feugiat dolore viverra.</li>
+                    </ul>
 
-                <h3>Ordered</h3>
-                <ol>
-                    <li>Dolor pulvinar etiam magna etiam.</li>
-                    <li>Sagittis adipiscing lorem eleifend.</li>
-                    <li>Felis enim feugiat dolore viverra.</li>
-                </ol>
+                    <h3>Ordered</h3>
+                    <ol>
+                        <li>Dolor pulvinar etiam magna etiam.</li>
+                        <li>Sagittis adipiscing lorem eleifend.</li>
+                        <li>Felis enim feugiat dolore viverra.</li>
+                    </ol>
 
-                <h3>Definition</h3>
-                <dl>
-                    <dt>Term: Definition List title</dt>
-                    <dd>Definition: Definition text.</dd>
-                    <dt>Term: Startup</dt>
-                    <dd>Definition: A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
-                    <dt>Term: Water</dt>
-                    <dd>Definition: A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
-                </dl>
-            </div>
-        </section>
+                    <h3>Definition</h3>
+                    <dl>
+                        <dt>Term: Definition List title</dt>
+                        <dd>Definition: Definition text.</dd>
+                        <dt>Term: Startup</dt>
+                        <dd>Definition: A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                        <dt>Term: Water</dt>
+                        <dd>Definition: A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                    </dl>
+                </div>
+            </section>
 
-        <h1>Heading level 1</h1>
-        <h2>Heading level 2</h2>
-        <h3>Heading level 3</h3>
-        <h4>Heading level 4</h4>
-        <h5>Heading level 5</h5>
-        <h6>Heading level 6</h6>
+            <h1>Heading level 1</h1>
+            <h2>Heading level 2</h2>
+            <h3>Heading level 3</h3>
+            <h4>Heading level 4</h4>
+            <h5>Heading level 5</h5>
+            <h6>Heading level 6</h6>
 
-        <!-- Horizontal rule -->
-        <section>
-            <header>
-                <h2>Horizontal rule</h2>
-            </header>
-            <div>
-                <hr>
-            </div>
-        </section>
+            <!-- Horizontal rule -->
+            <section>
+                <header>
+                    <h2>Horizontal rule</h2>
+                </header>
+                <div>
+                    <hr>
+                </div>
+            </section>
 
-        <!-- Blockquotes -->
-        <section>
-            <!-- Blockquotes Section -->
-            <header>
-                <h2>Blockquotes</h2>
-            </header>
+            <!-- Blockquotes -->
+            <section>
+                <header>
+                    <h2>Blockquotes</h2>
+                </header>
 
-            <!-- Inline quote -->
-            <div>
-                <h3>Inline quote</h3>
-                <p><q>Stay hungry. Stay foolish.</q></p>
-            </div>
+                <div>
+                    <h3>Inline quote</h3>
+                    <q>Stay hungry. Stay foolish.</q>
+                </div>
 
-            <!-- Blockquote -->
-            <div>
-                <h3>Blockquote</h3>
-                <blockquote>
-                    I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
-                </blockquote>
-                <cite>- Kanye West, Musician</cite>
-            </div>
+                <div>
+                    <h3>Blockquote</h3>
+                    <blockquote cite="Kanye West, Musician">
+                        I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+                    </blockquote>
+                    <footer>- Kanye West, Musician</footer>
+                </div>
+            </section>
         </section>
     </main>
 
