--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -11,195 +11,227 @@
 <body>
 
 <!-- Header -->
-    <header>
+<header>
+    <div>
         <div>
-            <div>
-                <a href="/">
-                    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
-                </a>
-            </div>
+            <a href="/">
+                <img src="logo-black.png" alt="Techium logo" width="160" height="40">
+            </a>
         </div>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#works">Works</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#latest_news">Latest news</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#latest_news">Latest news</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
 <!-- Main -->
-    <main>
-        <h1>Homepage</h1>
+<main>
+    <h1>Homepage</h1>
 
 <!-- Hero section -->
-        <section>
-            <div>
-                <!-- header -->
-                <header>
-                    <h2>We help you build your brand!</h2>
-                    <a href="#">Get started</a>
-                </header>
-            </div>
-        </section>
+<section>
+    <div>
+        <header>
+            <h2>We help you build your brand!</h2>
+            <a href="#">Get started</a>
+        </header>
+    </div>
+</section>
 
 <!-- Services section -->
-        <section>
-            <div>
-                <!-- header -->
-                <header>
-                    <h2>Services</h2>
-                    <p>We work with you</p>
-                </header>
-                <div>
-                    <h3><a href="#">Design & Concept</a></h3>
-                    <h3><a href="#">Digital Strategy</a></h3>
-                    <h3><a href="#">Content Strategy</a></h3>
-                    <h3><a href="#">UX Design</a></h3>
-                    <h3><a href="#">Web Development</a></h3>
-                    <h3><a href="#">Social Media</a></h3>
-                </div>
-            </div>
-        </section>
+<section>
+    <div>
+        <header>
+            <h2>Services</h2>
+            <p>We work with you</p>
+        </header>
+        <div>
+            <h3><a href="#">Design & Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Content Strategy</a></h3>
+            <h3><a href="#">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
+        </div>
+    </div>
+</section>
 
 <!-- Works section -->
-        <section>
-            <div>
-                <!-- header -->
-                <header>
-                    <h2>Works</h2>
-                    <p>Take a look in our portfolio</p>
-                </header>
-                <div>
-                    <img src="images/pic-work-01.jpg" alt="empty">
-                </div>
-                <article><h3><a href="#">Interior Design</a></h3></article>
-                <div>
-                    <img src="images/pic-work-02.jpg" alt="empty">
-                </div>
-                <article><h3><a href="#">Web Development</a></h3></article>
-                <div>
-                    <img src="images/pic-work-03.jpg" alt="empty">
-                </div>
-                <article><h3><a href="#">Personal Brand</a></h3></article>
-            </div>
-        </section>
+<section>
+    <div>
+        <header>
+            <h2>Works</h2>
+            <p>Take a look in our portfolio</p>
+        </header>
+
+        <!-- First div with image -->
+        <div>
+            <img src="images/pic-work-01.jpg" alt="" />
+        </div>
+        <article><h3><a href="#">Interior Design</a></h3></article>
+
+        <!-- Second div with image -->
+        <div>
+            <img src="images/pic-work-02.jpg" alt="" />
+        </div>
+        <article><h3><a href="#">Web Development</a></h3></article>
+
+        <!-- Third div with image -->
+        <div>
+            <img src="images/pic-work-03.jpg" alt="" />
+        </div>
+        <article><h3><a href="#">Personal Brand</a></h3></article>
+    </div>
+</section>
 
 <!-- About Us section -->
-        <section>
+<section>
+    <div>
+        <header>
+            <h2>About us</h2>
+            <p>Everything about us</p>
+        </header>
+        <div>
+            <!-- Image before first h3 -->
             <div>
-                <!-- header -->
-                <header>
-                    <h2>About us</h2>
-                    <p>Everything about us</p>
-                </header>
-                <img src="images/pic-about-us.jpg" alt="empty" width="460" height="447">
-                <div>
-                    <h3>Who are we</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                    <h3>Our culture</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                    <h3>How we work</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                </div>
-                <a href="about.html">Learn more about us</a>
+                <img src="images/pic-about-us.jpg" alt="" width="460" height="447" />
             </div>
-        </section>
+            <h3>Who are we</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+            <h3>Our culture</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+            <h3>How we work</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+        </div>
+        <a href="about.html">Learn more about us</a>
+    </div>
+</section>
 
 <!-- Latest news section -->
-        <section>
-            <div>
-                <!-- header -->
-                <header>
-                    <h2>Latest news</h2>
-                </header>
+<section>
+    <div>
+        <header>
+            <h2>Latest news</h2>
+        </header>
+        <div>
+            <!-- First article with image -->
+            <article>
                 <div>
-                    <article>
-                        <div>
-                            <img src="images/pic-blog-01.jpg" alt="empty" width="305" height="205">
-                        </div>
-                        <p>Career</p>
-                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                        <p><small>By Kelly D.</small></p>
-                    </article>
-                    <article>
-                        <div>
-                            <img src="images/pic-blog-02.jpg" alt="empty" width="305" height="205">
-                        </div>
-                        <p>Digital Life</p>
-                        <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-                        <p><small>By William A.</small></p>
-                    </article>
-                    <article>
-                        <div>
-                            <img src="images/pic-blog-03.jpg" alt="empty" width="305" height="205">
-                        </div>
-                        <p>Social</p>
-                        <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-                        <p><small>By Frances J.</small></p>
-                    </article>
+                    <img src="images/pic-blog-01.jpg" alt="" width="305" height="205" />
                 </div>
-            </div>
-        </section>
+                <p>Career</p>
+                <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <p><small>By Kelly D.</small></p>
+            </article>
+
+            <!-- Second article with image -->
+            <article>
+                <div>
+                    <img src="images/pic-blog-02.jpg" alt="" width="305" height="205" />
+                </div>
+                <p>Digital Life</p>
+                <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem.</p>
+                <p><small>By William A.</small></p>
+            </article>
+
+            <!-- Third article with image -->
+            <article>
+                <div>
+                    <img src="images/pic-blog-03.jpg" alt="" width="305" height="205" />
+                </div>
+                <p>Social</p>
+                <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis.</p>
+                <p><small>By Frances J.</small></p>
+            </article>
+        </div>
+    </div>
+</section>
 
 <!-- Testimonials section -->
-        <section>
-            <div>
-                <!-- header -->
-                <header>
-                    <h2>Testimonials</h2>
-                    <p>We are more than a digital company</p>
-                </header>
+<section>
+    <div>
+        <header>
+            <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
+        </header>
+        <div>
+            <!-- First testimonial with image -->
+            <article>
                 <div>
-                    <article>
-                        <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
-                        <blockquote>"I am completely blown away. Thanks to Techium, we've just launched our 5th website!"</blockquote>
-                        <cite>-Yuri Y.</cite>
-                    </article>
-                    <article>
-                        <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
-                        <blockquote>"Thank you so much for your help. Techium company is awesome!"</blockquote>
-                        <cite>-Dorrie S.</cite>
-                    </article>
-                    <article>
-                        <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
-                        <blockquote>"I love your system. Definitely worth the investment. I'd be lost without Techium company."</blockquote>
-                        <cite>-Sven H.</cite>
-                    </article>
+                    <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px" />
                 </div>
-            </div>
-        </section>
+                <blockquote>"I am completely blown away. Thanks to Techium, we've just launched our 5th website!"</blockquote>
+                <cite>-Yuri Y.</cite>
+            </article>
+
+            <!-- Second testimonial with image -->
+            <article>
+                <div>
+                    <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px" />
+                </div>
+                <blockquote>"Thank you so much for your help. Techium company is awesome!"</blockquote>
+                <cite>-Dorrie S.</cite>
+            </article>
+
+            <!-- Third testimonial with image -->
+            <article>
+                <div>
+                    <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px" />
+                </div>
+                <blockquote>"I love your system. Definitely worth the investment. I'd be lost without Techium company."</blockquote>
+                <cite>-Sven H.</cite>
+            </article>
+        </div>
+    </div>
+</section>
 
 <!-- Contact section -->
-        <section>
-            <div>
-                <!-- header -->
-                <header>
-                    <h2>Contact</h2>
-                    <p>We like to know new people</p>
-                </header>
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                </div>
-                <a href="contact.html">Get in touch</a>
-            </div>
-        </section>
+<section>
+    <div>
+        <header>
+            <h2>Contact</h2>
+            <p>We like to know new people</p>
+        </header>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+        </div>
+        <a href="contact.html">Get in touch</a>
+    </div>
+</section>
 
-    </main>
+</main>
 
 <!-- Footer -->
-    <footer>
-        <div>
-            <img src="logo-black.png" alt="Techium logo" width="160" height="40">
-            <p>234 Washington Street<br>Urbana, Illinois</p>
-            <ul>
-                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-                <li><a href
+<footer>
+    <div>
+        <img src="logo-black.png" alt="Techium logo" width="160" height="40">
+        <p>234 Washington Street<br>Urbana, Illinois</p>
+        <ul>
+            <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+            <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+            <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+        </ul>
+    </div>
+    <hr> © 2020 Techium, made with ♥ by students at Holberton School.
+    <div>
+        <ul>
+            <a href="#">Terms of Use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Cookie Policy</a>
+        </ul>
+    </div>
+</footer>
+
+</body>
+</html>
